web with scroll reveal

--- a/index.html
+++ b/index.html
@@ -4,178 +4,90 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<script src="https://unpkg.com/scrollreveal"></script>
 	<title>GitHub Community Spain</title>
 </head>
 <body>
-	<header class="header-landing">
-    <div class="wrap-logo">
-      <img src="./images/github-community.png" alt="Logo de la comunidad Github España" class="logo-header">
-    </div>
+
+  <header class="header">
+    <div class="container">
+        <h1 class="main-title">GitHub Community Spain</h1>
+        <div class="content">
+          <div class="image">
+            <img src="/images/github-community.png" alt="Comunidad github España">
+          </div>
+          <div class="text-box">
+            <h3>Lorem Ipsum</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+        </div>
+        <div class="media-icons">
+          <a href="#" class="icon"><i class="fab fa-meetup"></i></a>
+          <a href="#" class="icon"><i class="fab fa-github"></i></a>
+          <a href="#" class="icon"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="icon"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
   </header>
-  <section class="hero-section">
-    <div class="wrap-hero-section">
-      <h1>Comunidad Github España</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Qui sed cupiditate, eaque ipsam provident odio ex facilis, quas aspernatur, voluptate excepturi rerum architecto quo tempora voluptas repudiandae harum sapiente quidem.
-      </p>
-      <div class="wrap-cta">
-        <a href="/" class="cta-a">Llamada a la acción</a>
-      </div>
-    </div>
-  </section>
-  <section class="section logos-section">
-    <div class="wrap-logos-section">
-      <img src="" alt="" class="logo-brand">
-      <img src="" alt="" class="logo-brand">
-      <img src="" alt="" class="logo-brand">
-      <img src="" alt="" class="logo-brand">
-      <img src="" alt="" class="logo-brand">
-    </div>
-  </section>
-  <section class="section servicios-section">
-    <div class="wrap-title-section">
-      <h2>About us</h2>
-    </div>
-    <div class="wrap-servicios-section">
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-      <a href="" class="item-servicios-section">
-        <img src="./images/circle.png" alt="picture">
-          <p>Categoria</p>
-        </img>
-      </a>
-    </div>
-  </section>
-  <section class="section two-cols">
-   <div class="wrap-title-section">
-    <h2>¿Qué nos define?</h2>
-   </div>
-   <div class="wrap-two-cols">
-    <div class="wrap-img_two-cols">
-      <img src="./images/hello-cat.png" alt="Gato astronauta con la pata levantada saludando">
-    </div>
-    <div class="wrap-img_two-cols">
-      <div class="wrap-text-col">
-        <h3>Nuestro moto</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-          Ut sint inventore dolor soluta, numquam ea est at ipsam facilis minus consectetur iste pariatur accusantium dolorum quod quas repellendus vitae earum.
-        </p>
-        <div class="wrap-cta">
-          <a href="/" class="cta-a">Llamada a la acción</a>
+
+  <section class="about">
+    <div class="container">
+      <h2 class="section-title">Nosotros</h2>
+      <div class="content">
+        <div class="image">
+          <img src="./images/github-cat.png" alt="Gato astronauta">
+        </div>
+        <div class="info">
+          <h3 class="info-title">¿Quiénes somos?</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </p>
         </div>
       </div>
-    </div> 
-   </div>
+    </div>
   </section>
+
+<section class="contact">
+  <div class="container">
+    <h3 class="section-title">Lorem ipsum</h3>
+    <div class="content">
+      <ul class="media-info">
+        <li><a href="#"><i class="fab fa-youtube"></i>Youtube</a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+        <li><a href="#"><i class="fab fa-github"></i>Github</a></li>
+        <li><a href="#"><i class="fab fa-meetup"></i>Meet up</a></li>
+      </ul>
+      <div class="image">
+        <img src="./images/hello-cat.png" alt="Gato astronauta saludando con la pata">
+      </div>
+    </div>
+  </div>
+</section>
   
-  <section class="section two-cols">
-   <div class="wrap-title-section">
-    <h3>Contacta con nosotros</h3>
-    <form action="" class="form">
-      <label for="name">Nombre:</label>
-      <input type="text" name="name" id="name" required>
-      <label for="issue">Asunto:</label>
-      <input type="text" name="issue" id="issue" required>
-      <label for="message">Mensaje:</label>
-      <textarea name="message" id="message" cols="50" rows="4" required></textarea>
-      <input type="submit" value="Enviar" class="cta-a">
-    </form>
-   </div>
-    <div class="wrap-two-cols">
-      <div class="wrap-img_two-cols">
-        <img src="./images/github-cat.png" alt="Gato astronauta con la pata levantada saludando">
-      </div>
-    </div>
-  </section>
-  <footer class="footer-section">
-    <div class="wrap-footer-section">
-      <div class="wrap-social-logos">
-        <ul>
-          <li>
-            <a href="">
-              <img src="./images/meetup-svgrepo-com.svg" alt="Logo meet up" class="social-logo">
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/youtube-color-svgrepo-com.svg" alt="Logo Youtube" class="social-logo">
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img src="./images/github-svgrepo-com.svg" alt="Logo Github" class="social-logo">
-            </a>
-          </li>
-        </ul>
-      </div>
 
-      <div class="menu-footer-section">
-        <div class="wrap-menu-footer-section">
-          <ul>
-            <li><a href=""></a>Inicio</li>
-            <li><a href=""></a>Servicios</li>
-            <li><a href=""></a>Quienes somos</li>
-            <li><a href=""></a>Blog</li>
-            <li><a href=""></a>Contacto</li>
-          </ul>
-        </div>
-      </div>
-    </div>
 
-    <div class="menu-footer-section">
-      <div class="footer-creds">
-        <p>© 2023 Copyright - Github Community Spain - Todos los derechos reservados.</p>
-      </div>
-    </div>
-  </footer>
+      <script>
+        ScrollReveal({
+          //reset:true,
+          distance:'60px',
+          duration:2500,
+          delay:400
+        });
+
+        ScrollReveal().reveal('.main-title, .section-title', {delay: 500, origin:'left'});
+        ScrollReveal().reveal('.header .image, .info', {delay: 700, origin:'bottom'});
+        ScrollReveal().reveal('.text-box', {delay: 700, origin:'right'});
+        ScrollReveal().reveal('.media-icons i', {delay: 500, origin:'bottom', interval: 200});
+        ScrollReveal().reveal('.about .image, .contact .image', {delay: 500, origin:'top'});
+        ScrollReveal().reveal('.media-info li', {delay: 500, origin:'left', interval: 200});
+      </script>
 
 </body>
 </html>
