--- a/index.html
+++ b/index.html
@@ -4,90 +4,126 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	<script src="https://unpkg.com/scrollreveal"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+	
 	<title>GitHub Community Spain</title>
 </head>
-<body>
 
-  <header class="header">
-    <div class="container">
-        <h1 class="main-title">GitHub Community Spain</h1>
-        <div class="content">
-          <div class="image">
-            <img src="/images/github-community.png" alt="Comunidad github España">
+  <body>
+    <!-- HEADER -->
+    <header>
+      <nav>
+        <a href="index.html"><img src="./images/Logo.png" alt="Github España Logo">Github España</a>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#wedo">Qué hacemos</a></li>
+            <li><a href="#about">Contacto</a></li>
+            <li><a href="#events">Eventos</a></li>
+          </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
+      </nav>
+      <section class="text-box">
+        <h1>Ven a conocer nuestra comunidad</h1>
+        <p>Creemos en el poder de compartir, aprender y colaborar con otras personas que tienen los mismos intereses y objetivos que nosotros.
+          Queremos crear un espacio abierto, inclusivo y diverso donde podamos expresarnos, inspirarnos y crecer juntos.
+        </p>
+        <a href="https://www.meetup.com/comunidad-github-spain/" target="_blank" class="hero-btn">¡Entra y conócenos!</a>
+      </section>
+    </header>
+    <!-- MAIN -->
+    <main>
+      <section class="wedo" id="wedo">
+        <h1>Qué hacemos</h1>
+        <p>Fomentamos la cultura del aprendizaje continuo, la curiosidad y la experimentación. 
+          Animamos a todos los miembros de nuestra comunidad a que se involucren en el proceso de enseñar y aprender, tanto dentro como fuera de nuestra red.
+        </p>
+        <div class="row">
+          <div class="wedo-col">
+            <h3>Altruista y generosa</h3>
+            <p>Nadie en la organización obtiene algún tipo beneficio monetario.
+              Queremos aportar valor a la sociedad y al sector tecnológico con nuestros proyectos, nuestras ideas y nuestras experiencias.
+            </p>
           </div>
-          <div class="text-box">
-            <h3>Lorem Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <div class="wedo-col">
+            <h3>Abierta y participativa</h3>
+            <p>Cualquier persona que quiera colaborar y ayudar a dinamizar nuestra comunidad es bienvenida.
+               Queremos expandir nuestra red por diferentes lugares y ciudades de España, para llegar a más personas y crear más oportunidades.
+            </p>
+          </div>
+          <div class="wedo-col">
+            <h3>Basada en Github</h3>
+            <p>GitHub nos permite gestionar nuestros proyectos, documentar nuestro trabajo y compartir nuestro código con el mundo. 
+              Reconocemos el valor de GitHub como herramienta y como filosofía de trabajo.
+            </p>
+          </div>
+        </div>  
+      </section>
+      <section class="about" id="about">
+        <h1>Quiénes somos</h1>
+        <div class="row">
+          <div class="about-col">
+            <img src="./images/ArantxaDR.png" alt="Foto de Arantxa">
+            <div class="layer">
+              <h3>Arantxa Delgado</h3>
+              <p>Desarrolladora front. Entre la fina línea del border y el padding siempre tiene margin.</p>
+            </div>
+          </div>
+          <div class="about-col">
+            <img src="./images/DavidGonzalo.png" alt="Foto de David">
+            <div class="layer">
+              <h3>David Gonzalo</h3>
+              <p>Desarrollador software. Tabernero de los que trapo en mano siempre dejan el código limpio para servir otra ronda más.</p>
+            </div>
+          </div>
+          <div class="about-col">
+            <img src="./images/javicastillo.png" alt="Foto de Javier">
+            <div class="layer">
+              <h3>Javier Castillo</h3>
+              <p>Desarrollador .NET. No hay dragón que se le resista en la torre, ni mazmorra en la que no se divierta.</p>
+            </div>
+          </div>
+          <div class="about-col">
+            <img src="./images/micheloni.png" alt="Foto de Leonardo">
+            <div class="layer">
+              <h3>Leonardo Micheloni</h3>
+              <p>Desarrollador software. Bebedor de mate y matador de teclas. MVP en cada partido que juega.</p>
+            </div>
           </div>
         </div>
-        <div class="media-icons">
-          <a href="#" class="icon"><i class="fab fa-meetup"></i></a>
-          <a href="#" class="icon"><i class="fab fa-github"></i></a>
-          <a href="#" class="icon"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="icon"><i class="fab fa-youtube"></i></a>
+      </section>
+      <!-- slider -->
+      <section class="events" id="events">
+        <h1>Eventos</h1>
+        <p>Nos gusta juntarnos, charlar y tomarnos algo para seguir debatiendo. ¿Te vienes?</p>
+        <div class="wrapper">
+         <div class="slide">
+          <ul>
+            <li><img class="carousel-img" src="./images/S1_07201.jpg" alt="Montón de pegatinas del octocat de github con trajes diferentes"></li>
+            <li><img class="carousel-img" src="./images/S1_07223.jpg" alt="Grupo de asistentes y ponentes charlando antes del evento."></li>
+            <li><img class="carousel-img" src="./images/S1_07231.jpg" alt="Sala de Tokiota, donde se realizó el evento, con las pantallas preparadas para las charlas"></li>
+            <li><img class="carousel-img" src="./images/S1_07290.jpg" alt="Los tres ponentes, Leo y David de espaldas, Margarita de frente, charlando mientras disfrutan del picoteo."></li>
+          </ul>
+         </div>
         </div>
+      </section>
+    
+
+    </main>
+    <!-- FOOTER -->
+    <footer class="footer">
+      <h4>Contacto</h4>
+      <p>Puedes contactar con nosotros a través de nuestras redes sociales o mandando un mail. </p>
+      <div class="icons">
+        <a href="mailto:githubcummunityspain@gmail.com" aria-label="mail"><i class="fa-brands fa-mail-reply"></i></a>
+        <a href="https://twitter.com/GithubCommSpain" target="_blank" aria-label="twitter"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.meetup.com/comunidad-github-spain/" target="_blank" aria-label="meetup"><i class="fa-brands fa-meetup"></i></a>  
+        <a href="https://www.youtube.com/channel/UCN5dCYnjDMDiAMa0kE7wmnw" target="_blank" aria-label="youtube"> <i class="fa-brands fa-youtube"></i></a>
+        <a href="https://github.com/Comunidad-Github-Spain/.github/tree/main/profile" target="_blank" aria-label="github"><i class="fa-brands fa-github"></i></a>
       </div>
-  </header>
-
-  <section class="about">
-    <div class="container">
-      <h2 class="section-title">Nosotros</h2>
-      <div class="content">
-        <div class="image">
-          <img src="./images/github-cat.png" alt="Gato astronauta">
-        </div>
-        <div class="info">
-          <h3 class="info-title">¿Quiénes somos?</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-<section class="contact">
-  <div class="container">
-    <h3 class="section-title">Lorem ipsum</h3>
-    <div class="content">
-      <ul class="media-info">
-        <li><a href="#"><i class="fab fa-youtube"></i>Youtube</a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
-        <li><a href="#"><i class="fab fa-github"></i>Github</a></li>
-        <li><a href="#"><i class="fab fa-meetup"></i>Meet up</a></li>
-      </ul>
-      <div class="image">
-        <img src="./images/hello-cat.png" alt="Gato astronauta saludando con la pata">
-      </div>
-    </div>
-  </div>
-</section>
-  
-
-
-      <script>
-        ScrollReveal({
-          //reset:true,
-          distance:'60px',
-          duration:2500,
-          delay:400
-        });
-
-        ScrollReveal().reveal('.main-title, .section-title', {delay: 500, origin:'left'});
-        ScrollReveal().reveal('.header .image, .info', {delay: 700, origin:'bottom'});
-        ScrollReveal().reveal('.text-box', {delay: 700, origin:'right'});
-        ScrollReveal().reveal('.media-icons i', {delay: 500, origin:'bottom', interval: 200});
-        ScrollReveal().reveal('.about .image, .contact .image', {delay: 500, origin:'top'});
-        ScrollReveal().reveal('.media-info li', {delay: 500, origin:'left', interval: 200});
-      </script>
-
-</body>
+      <p>Made with love by Arantxa</p>
+    </footer>
+  </body>
 </html>
