--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <a href="https://www.youtube.com/channel/UCN5dCYnjDMDiAMa0kE7wmnw" target="_blank" aria-label="youtube"> <i class="fa-brands fa-youtube"></i></a>
         <a href="https://github.com/Comunidad-Github-Spain/.github/tree/main/profile" target="_blank" aria-label="github"><i class="fa-brands fa-github"></i></a>
       </div>
-      <p>Made with love by Arantxa</p>
+      <small>Made with love by <a href="https://github.com/ArantxaDR" target="_blank">Arantxa</a></small>
     </footer>
 
 
