--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <h4>Contacto</h4>
       <p>Puedes contactar con nosotros a través de nuestras redes sociales o mandando un mail. </p>
       <div class="icons">
-        <a href="mailto:githubcummunityspain@gmail.com" aria-label="mail"><i class="fa-brands fa-mail-reply"></i></a>
+        <a href="mailto:githubcummunityspain@gmail.com" aria-label="mail"><i class="fa-regular fa-envelope"></i></a>
         <a href="https://twitter.com/GithubCommSpain" target="_blank" aria-label="twitter"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://www.meetup.com/comunidad-github-spain/" target="_blank" aria-label="meetup"><i class="fa-brands fa-meetup"></i></a>  
         <a href="https://www.youtube.com/channel/UCN5dCYnjDMDiAMa0kE7wmnw" target="_blank" aria-label="youtube"> <i class="fa-brands fa-youtube"></i></a>
