--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-	
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<title>GitHub Community Spain</title>
 </head>
 
@@ -75,20 +75,20 @@
             <img src="./images/DavidGonzalo.png" alt="Foto de David">
             <div class="layer">
               <h3>David Gonzalo</h3>
-              <p>Desarrollador software. Tabernero de los que trapo en mano siempre dejan el código limpio para servir otra ronda más.</p>
+              <p>Desarrollador software. Tabernero de trapo en mano. Siempre deja el código limpio para servir otra ronda más.</p>
             </div>
           </div>
           <div class="about-col">
             <img src="./images/javicastillo.png" alt="Foto de Javier">
             <div class="layer">
               <h3>Javier Castillo</h3>
-              <p>Desarrollador .NET. No hay dragón que se le resista en la torre, ni mazmorra en la que no se divierta.</p>
+              <p>Desarrollador .NET. No hay dragón que se le resista en la torre ni mazmorra en la que no se divierta.</p>
             </div>
           </div>
           <div class="about-col">
             <img src="./images/micheloni.png" alt="Foto de Leonardo">
             <div class="layer">
-              <h3>Leonardo Micheloni</h3>
+              <h3>Leo Micheloni</h3>
               <p>Desarrollador software. Bebedor de mate y matador de teclas. MVP en cada partido que juega.</p>
             </div>
           </div>
